Fix z-index of the top link

--- a/ext/bg/css/settings2.css
+++ b/ext/bg/css/settings2.css
@@ -372,6 +372,7 @@ h3 {
     position: sticky;
     top: 0;
     height: 2em;
+    z-index: 1;
 }
 .sidebar-top-link {
     display: block;
